--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "rxjs-observable": "0.0.7",
+    "rxjs-operators": "^1.1.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
